# amzn-blackfriday-scraper

./: .gitignore  README.md  pyproject.toml  run.sh
src/etl/: ingestionETL.py  pipeline.py  rawETL.py  trustedETL.py
src/infra/: lambda_scraper.py  requirements-lambda.txt  s3.py
src/scraper/data/: 2025-11-24_22-50-35_items.jsonl  2025-11-25_12-06-49_items.jsonl  2025-11-25_14-47-02_items.jsonl  2025-11-25_16-12-28_items.jsonl  2025-11-25_17-28-08_items.jsonl  2025-11-25_17-56-40_items.jsonl  2025-11-26_13-10-13_items.jsonl  2025-11-28_15-29-29_items.jsonl  2025-11-28_18-34-55_items.jsonl  2025-11-28_21-11-56_items.jsonl  2025-11-28_22-35-44_items.jsonl  2025-11-28_23-15-48_items.jsonl
src/scraper/scraper/: settings.py
src/scraper/scraper/spiders/: amazon.py  info.md
